infrastructure/storage/longhorn/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middlewares
  namespace: longhorn
spec:
  chain:
    middlewares:
      - name: oauth2-proxy
        namespace: oauth2-proxy
