infrastructure/storage/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: longhorn
spec:
  hostnames:
    - longhorn.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: longhorn-frontend
          kind: Service
          port: 80
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
